--- a/backend/models/blog/posts/1.md
+++ b/backend/models/blog/posts/1.md
@@ -22,7 +22,7 @@ Here I use an example of Beagle Bone Green which is arm architecture running deb
 
 There are three helpful tools to find out all the header files and static libs used by python:
 - [pkg-config](https://linux.die.net/man/1/pkg-config): run `pkg-config --libs --cflags  python3` to find all the header files
-- [ldd](http://man7.org/linux/man-pages/man1/ldd.1.html): run `ldd /usr/bin/python3.4` to find static libs (.so)
+- [ldd](http://man7.org/linux/man-pages/man1/ldd.1.html): run `ldd /usr/bin/python3.4` to find static and shared libs
 - [readelf](https://linux.die.net/man/1/readelf) print out symbols in a .so file
 
 
