--- a/backend/models/blog/posts/2.md
+++ b/backend/models/blog/posts/2.md
@@ -1,4 +1,4 @@
-# link cpp lib to c application
+# Link Cpp Lib to C Application
 runtime link a lib compiled with g++ to a gcc compiled application
 
 ### Why needed?
