--- a/docs/readings/2020_09.md
+++ b/docs/readings/2020_09.md
@@ -1,11 +1,12 @@
 ---
 title: Graphics and System Readings
 lang: en-US
-date: 2020-05-27
+date: 2020-09-22
 ---
 
 Blogs and news read in Sept. 2020 that I found interesting. Summaries updated in Feb. 2021.
 <!-- more -->
+Opinions on my own and please judge the credibility  by yourself.
 
 ----
 
