Add more links.

--- a/docs/readings/2020_09.md
+++ b/docs/readings/2020_09.md
@@ -8,6 +8,8 @@ Blogs and news read in Sept. 2020 that I found interesting. Summaries updated in
 <!-- more -->
 Disclaimer: Opinions on my own and please judge the credibility by yourself.
 
+[[toc]]
+
 ----
 
 ### The Stack Monoid
