--- a/docs/readings/2021_01.md
+++ b/docs/readings/2021_01.md
@@ -143,7 +143,7 @@ Good readings to know about the complexity (surprisingly) behind `printk()` and 
 > The minimum version of Clang needed to build the kernel is now 10.0.1.
 
 Several aforementioned patches landed in 5.10.
-Also exciting to see [retpolines](https://support.google.com/faqs/answer/7625886) landed in kernel. Compensating some performance loss from "Spectre".
+Also exciting to see [retpolines](https://support.google.com/faqs/answer/7625886) landed in the kernel. Compensating some performance loss from "Spectre".
 
 ### Bootstrappable Builds
 [https://lwn.net/Articles/841797/](https://lwn.net/Articles/841797/) - January 6, 2021
@@ -181,31 +181,73 @@ The [ChamferWM](https://www.phoronix.com/scan.php?page=news_item&px=ChamferWM-Vu
 
 ### Developing Wayland Color Management and High Dynamic Range 
 [https://www.collabora.com/developing-wayland-color-management](https://www.collabora.com/news-and-blog/blog/2020/11/19/developing-wayland-color-management-and-high-dynamic-range/) - November 19, 2020
+> Wayland (the protocol and architecture) is still lacking proper consideration for color management... even X11 has not gained support for HDR... This is a story about starting the efforts to fix the situation on Wayland.
+
+> The foundation for the color management protocol are ICC profile files for describing both output and content color spaces... HDR brings even more reasons to put color space conversions in the display server than just the idea that all applications should be color managed...
+
+> There are several big and small open questions we haven't had the time to tackle yet... This work is likely to take months still before there is a complete tentative protocol, and probably years until these features are available in your favourite Wayland desktop environments.
+
+HDR display support has been missing from Linux for a very long time, even X11 hasn't got it yet.
+There is some progress on working out a HDR/color-management extension in Wayland.
+The protocol is going to be designed that
+the compositor will take the control of how to do tone mapping or gamut editing,
+depending on how 1) monitor config and property and 2) client surface config.
+So that both SDR surface and HDR surface will be delivered with good quality at the same time.
 
 ### From Panfrost to production, a tale of Open Source graphics
 [https://www.collabora.com/from-panfrost-to-production-a-tale](https://www.collabora.com/news-and-blog/blog/2020/11/03/from-panfrost-to-production-a-tale-of-open-source-graphics/) - November 03, 2020
 
+> the open source stack for Arm's Mali Midgard and Bifrost GPUs ...
+
+> Mesa 20.3 -- scheduled for release at the end-of-the-month -- will feature some Bifrost support out-of-the-box.
+
+Reverse-engineered Arm Bifrost stack is coming to the latest Mesa release.
+
 ### Reverse-Engineering The Apple M1 GPU
 [https://www.phoronix.com/scan.php?page=news_item&px=Apple-M1-GPU-RE](https://www.phoronix.com/scan.php?page=news_item&px=Apple-M1-GPU-RE) - January 7, 2021
 
-### GPU-Motunui (Render Disney Animation’s Moana island dataset)
-[https://www.render-blog.com/2020/10/03/gpu-motunui/](https://www.render-blog.com/2020/10/03/gpu-motunui/)
+> Alyssa Rosenzweig who is known for her work on reverse-engineering Arm GPUs and in particular the multi-year effort so far working on the Panfrost open-source driver stack has taken up an interest in Apple's M1 graphics processor...
 
 ### RV64X: A Free, Open Source GPU for RISC-V
 [https://www.eetimes.com/rv64x-a-free-open-source-gpu-for-risc-v/](https://www.eetimes.com/rv64x-a-free-open-source-gpu-for-risc-v/) - January 27, 2021
+
 Somehow reminds me of [Intel's failed x86 GPU project](https://www.techspot.com/article/2125-intel-last-graphics-card/).
 
 ### Attacking the Qualcomm Adreno GPU
 [https://googleprojectzero.blogspot.com/attacking-qualcomm-adreno-gpu](https://googleprojectzero.blogspot.com/2020/09/attacking-qualcomm-adreno-gpu.html) - September 8, 2020
 
+> This blog post focuses ... describe an unusual vulnerability in Qualcomm's Adreno GPU, and how it could be used to achieve kernel code execution from within the Android application sandbox ... For sandbox escapes, the GPU offers up a particularly interesting attack surface from the chipset tier. Since GPU acceleration is widely used in applications, the Android sandbox allows full access to the underlying GPU device.
+
+> To set up a new shared mapping, the application will ask the KGSL kernel driver for an allocation by calling the IOCTL_KGSL_GPUMEM_ALLOC ioctl. The kernel driver will prepare a region of physical memory, and then map this memory into the GPU's address space ...
+
+> Each userland process has its own GPU context, meaning that while a certain application is running operations on the GPU, the GPU will only be able to access mappings that it shares with that process. This is needed so that one application can't ask the GPU to read the shared mappings from another application. In practice this separation is achieved by changing which set of page tables is loaded into the IOMMU whenever a GPU context switch occurs. A GPU context switch occurs whenever the GPU is scheduled to run a command from a different process ... However certain mappings are used by all GPU contexts, and so can be present in every set of page tables. They are called global shared mappings, and are used for a variety of system and debugging functions between the GPU and the KGSL kernel driver.
+
+> dump the global mappings (and their GPU virtual addresses) ... scratch buffer has appeared! 
+
+> two primary usages of the scratch buffer: 1. The GPU address of a preemption restore buffer is dumped to the scratch memory, which appears to be used if a higher priority GPU command interrupts a lower priority command. 2. The read pointer (RPTR) of the ringbuffer (RB) is read from scratch memory and used when calculating the amount of free space in the ringbuffer.
+
+> To understand what an invalid RPTR value might mean for a ringbuffer allocation, we first need to describe the ringbuffer itself ... When a userland application submits a GPU command ... The kernel driver will write commands into the ringbuffer, and the GPU will read commands from the ringbuffer ... This occurs in a similar fashion to classical circular buffers ... Two indices are maintained to track where the CPU is writing to (WPTR), and where the GPU is reading from (RPTR). 
+
+> So what happens if the scratch RPTR value is controlled by an attacker? ... For example, we can make the condition ... succeed when it normally wouldn't by artificially increasing the value of the scratch RPTR, which ... results in returning a portion of the ringbuffer that overlaps the correct RPTR location ... That means that an attacker could overwrite ringbuffer commands that haven't yet been processed by the GPU with incoming GPU commands! 
+
+> ... an attacker cannot modify the scratch buffer directly from their malicious/compromised userland process ... What if we could make the GPU hardware write a malicious RPTR value into the scratch buffer on our behalf? ... It turns out that not every global shared mapping can be written to by user-supplied GPU commands, but the scratch buffer can be ... an attacker can also construct these command sequences manually by setting up some GPU shared memory and calling IOCTL_KGSL_GPU_COMMAND ... CP_MEM_WRITE operation writes a constant value to a GPU address
+
+> Now that we know we can reliably control the scratch RPTR value ... what does overwriting it buy us?...
+
+> Recall that the ringbuffer is used to send commands from the CPU to the GPU. In practice however, user-supplied GPU commands are never placed directly onto the ringbuffer. This is for two reasons: 1) space in the ringbuffer is limited, and user-supplied GPU commands can be very large, and 2) the ringbuffer is readable by all GPU contexts, and so we want to ensure that one process can't read commands from a different process 
+
+> a layer of indirection occurs, and user-supplied GPU commands are run after an "indirect branch" from the ringbuffer occurs ... Conceptually system level commands are executed straight from the ringbuffer, and user level commands are run after an indirect branch into GPU shared memory. Once the user commands finish, control flow will return to the next ringbuffer operation. The indirect branch is performed with a CP_INDIRECT_BUFFER_PFE operation, which is inserted into the ringbuffer by adreno_ringbuffer_submitcmd. This operation takes two parameters, the GPU address of the branch target (e.g. a GPU shared memory mapping with user-supplied commands in it) and a size value.
+
+> Looking further, it looks like the GPU has the IOMMU's "TTBR0" register mapped to a protected mode GPU register as well. By reading the ARM address translation and IOMMU documentation, we can see that TTBR0 is the base address of the page tables used for translating GPU addresses to physical memory addresses. That means if we can point TTBR0 to a set of malicious page tables, then we can translate any GPU address to any physical address of our choosing ... we could make the GPU switch to an attacker controlled page table ... Not only would our GPU commands be able to read and write shared mappings from other processes, we would be able to read and write to any physical address in memory, including kernel memory!
+
+A well explained exploitation on Android that uses Adreno GPU to achieve kernel code execution.
+The article gives an excellent introduction on how CPU dispatches commands to GPU using RingBuffer and ScratchBuffer.
+And how a few tampering on ScratchBuffer and IOMMU register fools the GPU to read commands from a malicious controlled page.
+
 ### Let’s Build a High-performance Fuzzer with GPUs!
 [https://blog.trailofbits.com/lets-build-a-high-performance-fuzzer-with-gpus](https://blog.trailofbits.com/2020/10/22/lets-build-a-high-performance-fuzzer-with-gpus/) - October 22, 2020
+
 
 ### Using TLA+ in the Real World to Understand a Glibc Bug
 [https://probablydance.com/using-tla-in-the-real-world](https://probablydance.com/2020/10/31/using-tla-in-the-real-world-to-understand-a-glibc-bug/) - October 31, 2020
 
-### Productionizing Rendering Algorithms
-[https://bartwronski.com/why-are-video-games-graphics-still-a-challenge](https://bartwronski.com/2020/12/27/why-are-video-games-graphics-still-a-challenge-productionizing-rendering-algorithms/) - December 27, 2020
-
-### TSMC Confirms 3nm Tech for 2022 
-[https://www.pcgamer.com/tsmc-confirms-3nm-tech-for-2022](https://www.pcgamer.com/tsmc-confirms-3nm-tech-for-2022-could-enable-epic-80-billion-transistor-gpus/) - November 26, 2020
