--- a/docs/readings/2021_03.md
+++ b/docs/readings/2021_03.md
@@ -51,3 +51,22 @@ VK_EXT_descriptor_indexing brings update-after-bin support for descriptors. In m
 
 Using VK_EXT_descriptor_indexing in practice. It creates a maxminal number of descriptor set bindings beforehand and then allocate and free descriptors dynamically in each command draw.
 It uses a linked list to track the free slots of descriptors in the big descriptor set bindings.
+
+### OpenGL on DirectX: Conformance & upstreaming of the D3D12 driver
+[https://www.collabora.com/news-and-blog/news-and-events/opengl-directx-conformance-upstreaming-d3d12.html](https://www.collabora.com/news-and-blog/news-and-events/opengl-directx-conformance-upstreaming-d3d12.html)
+> ... have recently passed the OpenGL 3.3 conformance tests,
+
+> ... The D3D12 driver was upstreamed in Mesa in Merge-Request 7477, and the OpenCL compiler followed in Merge-Request 7565. 
+
+> Next step, WSL support!
+
+
+### Headless Native Backend and Virtual Monitors
+[https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/1698](https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/1698)
+
+> Ability to run the native backend on top of only a render node (i.e. no mode setting) and without evdev (a.k.a. "headless")
+> Ability to create virtual monitors via command line arguments, primarily for debugging purposes
+> Ability to create virtual monitors PipeWire streams via a new org.gnome.Mutter.ScreenCast.Session.RecordVirtual D-Bus method
+> ... another way for the headless mode to run under: surfaceless EGL context. This should make it possible to run headlessly without a render node too.
+
+Mutter has merged a change to support running on render node only (through Wayland) as well as without render node through EGL surfaceless. Looks like now it is possible to recording gnome-shell from start to end very easily.
